Final edits. Ready for Print

--- a/Poster/Poster.tex
+++ b/Poster/Poster.tex
@@ -104,8 +104,8 @@ To develop a robust scheme for image compression involving:
 \begin{itemize}\compresslist
 	\vspace{-0.4em}
 	\item Creating holes in an image
-	\item Encode and transmit the image
-	\item Simulate a noisy channel in order to introduce errors
+	\item Encoding and transmitting the image
+	\item Simulating a noisy channel in order to introduce errors
 	\item Identifying and filling the holes appropriately.
 \end{itemize}
 
@@ -364,7 +364,7 @@ An error analysis is carried out on the different image types calculating the pe
 	\centering
 	\begin{subfigure}{0.2\textwidth} % width of left subfigure
 		\includegraphics[scale=0.115]{5Pattern.jpg}
-		\caption{Quantized} % subcaption
+		\caption{Quantized DCT} % subcaption
 	\end{subfigure}
 	\vspace{1em} % here you can insert horizontal or vertical space
 	\begin{subfigure}{0.2\textwidth} % width of right subfigure
